included bar plot and parallel coordinate plot

--- a/Homework2/Templates/es6-webpack-template/node/src/assets/data/DataProcessing2.ipynb
+++ b/Homework2/Templates/es6-webpack-template/node/src/assets/data/DataProcessing2.ipynb
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "12270"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "48"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
        "48"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
        "122827          56   2010-02-26       0.0358  145.499  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,6 +1102,45 @@
    "outputs": [],
    "source": [
     "spotify_dup2.to_csv('Spotify_data2.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "valence                              0.893\n",
+       "year                                  2014\n",
+       "acousticness                         0.981\n",
+       "artists                           Survivor\n",
+       "danceability                         0.862\n",
+       "duration_ms                         314640\n",
+       "energy                               0.859\n",
+       "explicit                                 0\n",
+       "id                  7hxZF4jETnE5Q75rKQnMjE\n",
+       "instrumentalness                     0.897\n",
+       "key                                     10\n",
+       "liveness                             0.464\n",
+       "loudness                            -4.834\n",
+       "mode                                     1\n",
+       "name                             The Chair\n",
+       "popularity                              77\n",
+       "release_date                    2014-10-24\n",
+       "speechiness                          0.071\n",
+       "tempo                              204.241\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spotify_dup2.max()"
    ]
   },
   {
