--- a/ayxue/Homework2/Templates/simple-template/dataprocess/Untitled4.ipynb
+++ b/ayxue/Homework2/Templates/simple-template/dataprocess/Untitled4.ipynb
@@ -35,7 +35,6 @@
    "outputs": [],
    "source": [
     "post_year = 2010\n",
-    "total_gname = set()\n",
     "month_dict = {}\n",
     "gname_occ = {}\n",
     "for i, row in cereal_df.iterrows():\n",
@@ -46,7 +45,6 @@
     "        lat = row['latitude']\n",
     "        if not math.isnan(lat):\n",
     "            day = row['iday']\n",
-    "            total_gname.add(gname)\n",
     "            if gname not in gname_occ:\n",
     "                gname_occ[gname] = 0\n",
     "            gname_occ[gname] += 1\n",
@@ -175,10 +173,86 @@
     "with open('../date_coord.csv', 'w') as f:\n",
     "    l = 'date,gname,longitude,latitude,value\\n'\n",
     "    f.write(l)\n",
-    "    \n",
-    "with open('../date_coord.csv', 'a') as f:\n",
     "    for l in date_coord:\n",
     "        f.write(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gname_attype = {}\n",
+    "attype_occ = {}\n",
+    "for i, row in cereal_df.iterrows():\n",
+    "    year = row['iyear']\n",
+    "    month = row['imonth']\n",
+    "    gname = row['gname']\n",
+    "    if year >= post_year and gname in topK_groups:\n",
+    "        day = row['iday']\n",
+    "        lat = row['latitude']\n",
+    "        attype = row['attacktype1_txt']\n",
+    "        if not math.isnan(lat):\n",
+    "            day = row['iday']\n",
+    "            if attype not in attype_occ:\n",
+    "                attype_occ[attype] = 0\n",
+    "            attype_occ[attype] += 1\n",
+    "\n",
+    "            if gname not in gname_attype:\n",
+    "                gname_attype[gname] = {}\n",
+    "            if attype not in gname_attype[gname]:\n",
+    "                gname_attype[gname][attype] = 0\n",
+    "            gname_attype[gname][attype] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../gname_attype.csv', 'w') as f:\n",
+    "    l = 'gname,attype,value\\n'\n",
+    "    f.write(l)\n",
+    "    for gname in topK_groups:\n",
+    "        if ',' in gname:\n",
+    "            gname = '\"' + gname + '\"'        \n",
+    "        for attype in sorted(set(attype_occ)):\n",
+    "            l = gname + ',' + attype\n",
+    "            if attype in gname_attype[gname]:\n",
+    "                l += ',' + str(gname_attype[gname][attype])\n",
+    "            else:\n",
+    "                l += ',0'\n",
+    "            f.write(l + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Armed Assault',\n",
+       " 'Assassination',\n",
+       " 'Bombing/Explosion',\n",
+       " 'Facility/Infrastructure Attack',\n",
+       " 'Hijacking',\n",
+       " 'Hostage Taking (Barricade Incident)',\n",
+       " 'Hostage Taking (Kidnapping)',\n",
+       " 'Unarmed Assault',\n",
+       " 'Unknown']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(set(attype_occ))"
    ]
   },
   {
