--- a/ayxue/Homework2/simple-template/dataprocess/dataprocess.ipynb
+++ b/ayxue/Homework2/simple-template/dataprocess/dataprocess.ipynb
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "post_year = 2010\n",
+    "post_year = 2017\n",
     "month_dict = {}\n",
     "gname_occ = {}\n",
     "for i, row in cereal_df.iterrows():\n",
@@ -49,7 +49,7 @@
     "                gname_occ[gname] = 0\n",
     "            gname_occ[gname] += 1\n",
     "\n",
-    "            month_key = str(year) + '-' + str(month).zfill(2) + '-01'\n",
+    "            month_key = str(year) + '-' + str(month).zfill(2) + '-02'\n",
     "            if month_key not in month_dict:\n",
     "                month_dict[month_key] = {}\n",
     "            if gname not in month_dict[month_key]:\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,25 +86,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Taliban',\n",
-       " 'Islamic State of Iraq and the Levant (ISIL)',\n",
+       "['Islamic State of Iraq and the Levant (ISIL)',\n",
+       " 'Taliban',\n",
        " 'Al-Shabaab',\n",
-       " 'Boko Haram',\n",
        " \"New People's Army (NPA)\",\n",
+       " 'Boko Haram',\n",
        " 'Maoists',\n",
-       " 'Communist Party of India - Maoist (CPI-Maoist)',\n",
+       " 'Khorasan Chapter of the Islamic State',\n",
        " \"Kurdistan Workers' Party (PKK)\",\n",
-       " 'Tehrik-i-Taliban Pakistan (TTP)',\n",
-       " 'Houthi extremists (Ansar Allah)']"
+       " 'Houthi extremists (Ansar Allah)',\n",
+       " 'Sinai Province of the Islamic State']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,6 @@
     "        l += ',' + gname\n",
     "    f.write(l + '\\n')\n",
     "    \n",
-    "with open('../month_gname.csv', 'a') as f:\n",
     "    for date in month_dict:\n",
     "        l = date\n",
     "        for gname in topK_groups:\n",
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,23 +154,24 @@
     "        lat = row['latitude']\n",
     "        lon = row['longitude']\n",
     "        kill = row['nkill']\n",
+    "        attype = row['attacktype1_txt']\n",
     "        if not math.isnan(lat):\n",
     "            if math.isnan(kill):\n",
     "                kill = 0\n",
     "                \n",
     "            date = str(year) + '-' + str(month).zfill(2) + '-' + str(day).zfill(2)\n",
-    "            l = date + ',' + gname + ',' + str(lon) + ',' + str(lat) + ',' + str(kill) + '\\n'\n",
+    "            l = date + ',' + gname + ',' + str(lon) + ',' + str(lat) + ',' + str(kill) + ',' + str(attype) +'\\n'\n",
     "            date_coord.append(l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../date_coord.csv', 'w') as f:\n",
-    "    l = 'date,gname,longitude,latitude,value\\n'\n",
+    "    l = 'date,gname,longitude,latitude,value,attype\\n'\n",
     "    f.write(l)\n",
     "    for l in date_coord:\n",
     "        f.write(l)"
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        " 'Unknown']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
